--- a/extension/src/popup/views/AddToken/styles.scss
+++ b/extension/src/popup/views/AddToken/styles.scss
@@ -16,7 +16,6 @@
   }
 
   &__wrapper {
-    overflow: scroll;
     position: relative;
     flex-direction: column;
     display: flex;
